tests/toy/neg/001610_mutation.toylang
program a = { while a do int; } .
